--- a/final_project/templates/index.html
+++ b/final_project/templates/index.html
@@ -5,6 +5,8 @@
 	<title> my css practice tab</title>
 </head>
 
+<li><a href="{% url "city_portal"%}">city_portal</a></li>,
+<li><a href="{% url "nav_bar"%}">nav_bar</a></li>,
 <li><a href="{% url "colorful_button"%}">colorful_button</a></li>,
 <body>
 	<ul>
