--- a/final_project/static/city_portal/styles/style.css
+++ b/final_project/static/city_portal/styles/style.css
@@ -7,17 +7,14 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-50: oklch(97.1% 0.013 17.38);
     --color-red-100: oklch(93.6% 0.032 17.717);
     --color-red-600: oklch(57.7% 0.245 27.325);
-    --color-red-900: oklch(39.6% 0.141 25.723);
     --color-amber-50: oklch(98.7% 0.022 95.277);
+    --color-amber-100: oklch(96.2% 0.059 95.617);
     --color-yellow-500: oklch(79.5% 0.184 86.047);
-    --color-yellow-900: oklch(42.1% 0.095 57.708);
-    --color-blue-100: oklch(93.2% 0.032 255.585);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-gray-100: oklch(96.7% 0.003 264.542);
-    --color-gray-300: oklch(87.2% 0.01 258.338);
+    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-black: #000;
     --color-white: #fff;
@@ -278,6 +275,9 @@
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
+  .h-12 {
+    height: calc(var(--spacing) * 12);
+  }
   .h-15 {
     height: calc(var(--spacing) * 15);
   }
@@ -302,8 +302,8 @@
   .h-70 {
     height: calc(var(--spacing) * 70);
   }
-  .h-80 {
-    height: calc(var(--spacing) * 80);
+  .h-90 {
+    height: calc(var(--spacing) * 90);
   }
   .h-140 {
     height: calc(var(--spacing) * 140);
@@ -323,6 +323,9 @@
   .h-screen {
     height: 100vh;
   }
+  .w-12 {
+    width: calc(var(--spacing) * 12);
+  }
   .w-20 {
     width: calc(var(--spacing) * 20);
   }
@@ -331,9 +334,6 @@
   }
   .w-70 {
     width: calc(var(--spacing) * 70);
-  }
-  .w-80 {
-    width: calc(var(--spacing) * 80);
   }
   .w-175 {
     width: calc(var(--spacing) * 175);
@@ -364,6 +364,12 @@
   }
   .flex-none {
     flex: none;
+  }
+  .list-inside {
+    list-style-position: inside;
+  }
+  .list-disc {
+    list-style-type: disc;
   }
   .list-none {
     list-style-type: none;
@@ -435,6 +441,9 @@
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
+  .rounded-xl {
+    border-radius: var(--radius-xl);
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -474,6 +483,9 @@
   .bg-gray-100 {
     background-color: var(--color-gray-100);
   }
+  .bg-gray-400 {
+    background-color: var(--color-gray-400);
+  }
   .bg-linear-115 {
     --tw-gradient-position: 115deg;
     @supports (background-image: linear-gradient(in lab, red, red)) {
@@ -494,6 +506,9 @@
   .bg-\[url\(\'\.\.\/images\/addis_page1_bg\.png\'\)\] {
     background-image: url('../images/addis_page1_bg.png');
   }
+  .bg-\[url\(\'\.\.\/images\/amendment_logo\.png\'\)\] {
+    background-image: url('../images/amendment_logo.png');
+  }
   .bg-\[url\(\'\.\.\/images\/apple-card\.jpg\'\)\] {
     background-image: url('../images/apple-card.jpg');
   }
@@ -508,6 +523,12 @@
   }
   .bg-\[url\(\'\.\.\/images\/new-ipad\.jpg\'\)\] {
     background-image: url('../images/new-ipad.jpg');
+  }
+  .bg-\[url\(\'\.\.\/images\/property_logo\.png\'\)\] {
+    background-image: url('../images/property_logo.png');
+  }
+  .bg-\[url\(\'\.\.\/images\/transportation_logo\.png\'\)\] {
+    background-image: url('../images/transportation_logo.png');
   }
   .bg-\[url\(\'\.\.\/images\/watch-series-5\.jpg\'\)\] {
     background-image: url('../images/watch-series-5.jpg');
@@ -564,8 +585,14 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .px-12 {
+    padding-inline: calc(var(--spacing) * 12);
+  }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
+  }
+  .py-8 {
+    padding-block: calc(var(--spacing) * 8);
   }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
@@ -575,6 +602,9 @@
   }
   .text-justify {
     text-align: justify;
+  }
+  .text-start {
+    text-align: start;
   }
   .text-2xl {
     font-size: var(--text-2xl);
